Restoring Press and Resource. Fixing p spacing.

--- a/_sass/04-html.scss
+++ b/_sass/04-html.scss
@@ -43,9 +43,15 @@ a {
     text-decoration: underline;
   }
 }
-p {
-  margin: 1.5em 0;
+* + p {
+  margin: 1.5em 0 0 0;
 }
 img {
   max-width: 100%;
+}
+ul, ol {
+  margin-top: 0;
+  li p {
+    margin: 0;
+  }
 }
